# cvminecraft

./: questions
3d_points_recovery/by_epolar_constrain/: test.cpp
LK_optical_flow/: CMakeLists.txt  test.cpp
algos/lru/: DoubleLinkedList.hpp  LRU.hpp  test.cpp
ceres/helloworld/: CMakeLists.txt  test.cpp  test_numeric.cpp
ceres/rotation_estimate_2d/: CMakeLists.txt  test.cpp
ceres/rotation_estimate_3d_plane/: CMakeLists.txt  test.cpp
ceres/slam/: someUsefulLinks
ceres/slam/pose_graph_2d/: CMakeLists.txt  pose_graph_2d.cc  types.h
circle_detection/: test.cpp
color_threshold/: CMakeLists.txt  test.cpp  tool.cpp
curve_detection/: CurveDetection.hpp  test.cpp  test.m
edge_detection/Marr-Hildreth/: README.md  access_elem.m  demo.m  main.m  my_conv2.m  my_edge_detector.m  my_gaussian_kernel.m  my_laplacian_kernel.m  my_log_kernel.m  my_zero_crossing_detector.m  prog1.m  thresholdingImage.m  visulization.m  zero_crossing_evaluator.m
eigen/Isometry/: CMakeLists.txt  test.cpp
eigen/eigentest/: CMakeLists.txt  test  test.cpp
eigen/rpy_quat/: CMakeLists.txt  test.cpp
g2o/test_optimize_generated_loop/: CMakeLists.txt  test.cpp
getCam/: test  test.cpp
homography_matrix/: AAAAAH.m  DLT_solve_H.m  homographic_transform2D.m  homographic_transform2D.m~  street.m
hough_transfer/: main.m  projectToPolarSpace.m
image_difference/: CMakeLists.txt  PerspectiveDifference.hpp  test.cpp  test_perspective.cpp
image_stitching/: HW3_Main_Yitian.m  HW3_Main_Zhenyu.asv  HW3_Main_Zhenyu.m  HW3_Main_Zhenyu.m~  README.txt  autoGray.m  estimateHomography.m  featureExtraction.m  homoTransform.m  myHomo.m  myRansac.m  plotFeature.m  prog2.m  prog3.m  projection.m  ransac.m  rotmat2d.m  slctFeature.m  stitchImage2.m  stitchSeq.m  tryMatch.m
kalman_fiter/fusion_demo/: kalman_filter.m  lidar_response.m  main.m  main_2lidars.m  radar_f.m  radar_response.m  readme
learning_demo/: LeNet5.py  data_process.py
line_detection/: test.cpp
normal_estimation/: main.m  main.m~  test  test.c
opencv_vis/: test.cpp
opencv_vis/point_set/: CMakeLists.txt  PointCloudVisualizer.hpp  test.cpp
opencv_vis/range_image/: CMakeLists.txt  test.cpp
orb/: CMakeLists.txt  test.cpp  test_webcam.cpp
pca/: mycov.m  test.m
perspective_tranform/: test.cpp
pinhole_projection/: CMakeLists.txt  readme  test.cpp
pointcloudregistration/: test.cpp
pose_estimation/by_epolar_constrain/: CMakeLists.txt  test.cpp
pose_estimation/case_3D_2D/: SolvePnpCeres.hpp  (+1 more)
python_matlab/: addn.m  test.py
ros_fu/: readme
sift/: SIFT_key.m  createGussianKernel.m  dscp.m  image_registration.m  main.m  myatan.m  showFeatureCorr.m
two_view/: test.m
videoToFrames/: CMakeLists.txt  test.cpp
webcam_calib/: test.cpp
(+13 files in other folders)
